# aiyt

./: chore.py  index.html  pyproject.toml
aiyt/: __init__.py  main.py  ui.py  utils.py
