[project]
name = "aiyt"
version = "0.5.0"
description = "Transcribe, Chat and Summarize Youtube Video with AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["streamlit", "pytubefix", "google-genai"]


[project.license]
text = "MIT"

[project.urls]
License = "https://opensource.org/licenses/MIT"
repository = "https://github.com/hoishing/aiyt"

[dependency-groups]
dev = ["watchdog", "tomlkit", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiyt"]


[tool.ruff]
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]

[tool.ruff.isort]
no-sections = true
